[gd_scene load_steps=4 format=3 uid="uid://c3wc2ox21lbkh"]

[ext_resource type="Script" path="res://ComboLock.gd" id="1_w4tfk"]
[ext_resource type="Texture2D" uid="uid://n15obu7l8bne" path="res://assetss/mob_one_default.png" id="2_0bd83"]

[sub_resource type="LabelSettings" id="LabelSettings_6e46v"]
font_size = 23
font_color = Color(0, 0, 0, 1)

[node name="ComboLock" type="Node2D"]
script = ExtResource("1_w4tfk")

[node name="DigitContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Digit1" type="VBoxContainer" parent="DigitContainer"]
layout_mode = 2

[node name="UpButton1" type="Button" parent="DigitContainer/Digit1"]
layout_mode = 2
text = "↑"

[node name="Label1" type="Label" parent="DigitContainer/Digit1"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_6e46v")
horizontal_alignment = 1

[node name="DownButton1" type="Button" parent="DigitContainer/Digit1"]
layout_mode = 2
text = "↓"

[node name="Digit2" type="VBoxContainer" parent="DigitContainer"]
layout_mode = 2

[node name="UpButton2" type="Button" parent="DigitContainer/Digit2"]
layout_mode = 2
text = "↑"

[node name="Label2" type="Label" parent="DigitContainer/Digit2"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_6e46v")
horizontal_alignment = 1

[node name="DownButton2" type="Button" parent="DigitContainer/Digit2"]
layout_mode = 2
text = "↓"

[node name="Digit3" type="VBoxContainer" parent="DigitContainer"]
layout_mode = 2

[node name="UpButton3" type="Button" parent="DigitContainer/Digit3"]
layout_mode = 2
text = "↑"

[node name="Label3" type="Label" parent="DigitContainer/Digit3"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_6e46v")
horizontal_alignment = 1

[node name="DownButton3" type="Button" parent="DigitContainer/Digit3"]
layout_mode = 2
text = "↓"

[node name="CheckButton" type="Button" parent="."]
offset_left = -5.0
offset_top = 109.0
offset_right = 63.0
offset_bottom = 140.0
text = "Check"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, -16.0625)
scale = Vector2(0.0125, 0.0170899)
texture = ExtResource("2_0bd83")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(27, -20.5313)
scale = Vector2(0.021875, 0.0257324)
texture = ExtResource("2_0bd83")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(53, -25.2812)
scale = Vector2(0.0242188, 0.0308106)
texture = ExtResource("2_0bd83")

[connection signal="pressed" from="DigitContainer/Digit1/UpButton1" to="." method="_on_up_button_1_pressed"]
[connection signal="pressed" from="DigitContainer/Digit1/DownButton1" to="." method="_on_down_button_1_pressed"]
[connection signal="pressed" from="DigitContainer/Digit2/UpButton2" to="." method="_on_up_button_2_pressed"]
[connection signal="pressed" from="DigitContainer/Digit2/DownButton2" to="." method="_on_down_button_2_pressed"]
[connection signal="pressed" from="DigitContainer/Digit3/UpButton3" to="." method="_on_up_button_3_pressed"]
[connection signal="pressed" from="DigitContainer/Digit3/DownButton3" to="." method="_on_down_button_3_pressed"]
[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
